update module lộ trình thăng tiến